@@ -1,6 +1,6 @@
 package com.twitter.concurrent
 
-import com.twitter.util.{Future, Promise}
+import com.twitter.util._
 import java.util.concurrent.atomic.AtomicReference
 import scala.annotation.tailrec
 import scala.collection.immutable.Queue
@@ -11,15 +11,31 @@ object AsyncQueue {
   private case class Offering[T](q: Queue[T]) extends State[T]
   private case class Polling[T](q: Queue[Promise[T]]) extends State[T]
   private case class Excepting[T](q: Queue[T], exc: Throwable) extends State[T]
+
+  /** Indicates there is no max capacity */
+  private val UnboundedCapacity = Int.MaxValue
 }
 
 /**
  * An asynchronous FIFO queue. In addition to providing [[offer]]
  * and [[poll]], the queue can be [[fail "failed"]], flushing current
  * pollers.
+ *
+ * @param maxPendingOffers optional limit on the number of pending `offers`.
+ * The default is unbounded, but any other positive value can be used to limit
+ * the max queue size. Note that `Int.MaxValue` is used to denote unbounded.
  */
-class AsyncQueue[T] {
+class AsyncQueue[T](maxPendingOffers: Int) {
   import AsyncQueue._
+
+  /**
+   * An asynchronous, unbounded, FIFO queue. In addition to providing [[offer]]
+   * and [[poll]], the queue can be [[fail "failed"]], flushing current
+   * pollers.
+   */
+  def this() = this(AsyncQueue.UnboundedCapacity)
+
+  require(maxPendingOffers > 0)
 
   private[this] val state = new AtomicReference[State[T]](Idle)
 
@@ -70,34 +86,64 @@ class AsyncQueue[T] {
 
   /**
    * Insert the given element at the tail of the queue.
+   *
+   * @return `true` if the item was successfully added, `false` otherwise.
    */
   @tailrec
-  final def offer(elem: T): Unit = state.get match {
+  final def offer(elem: T): Boolean = state.get match {
     case s@Idle =>
       if (!state.compareAndSet(s, Offering(queueOf(elem))))
         offer(elem)
+      else true
+
+    case Offering(q) if q.size >= maxPendingOffers =>
+      false
 
     case s@Offering(q) =>
       if (!state.compareAndSet(s, Offering(q.enqueue(elem))))
         offer(elem)
+      else true
 
     case s@Polling(q) =>
       val (waiter, nextq) = q.dequeue
       val nextState = if (nextq.nonEmpty) Polling(nextq) else Idle
-      if (state.compareAndSet(s, nextState))
+      if (state.compareAndSet(s, nextState)) {
         waiter.setValue(elem)
-      else
+        true
+      } else {
         offer(elem)
+      }
 
     case Excepting(_, _) =>
-      // Drop.
+      false // Drop.
+  }
+
+  /**
+   * Drains any pending elements into a `Try[Queue]`.
+   *
+   * If the queue has been [[fail failed]] and is now empty,
+   * a `Throw` of the exception used to fail will be returned.
+   * Otherwise, return a `Return(Queue)` of the pending elements.
+   */
+  @tailrec
+  final def drain(): Try[Queue[T]] = state.get match {
+    case s@Offering(q) =>
+      if (state.compareAndSet(s, Idle)) Return(q)
+      else drain()
+    case s@Excepting(q, e) if q.nonEmpty =>
+      if (state.compareAndSet(s, Excepting(Queue.empty, e))) Return(q)
+      else drain()
+    case s@Excepting(q, e) =>
+      Throw(e)
+    case _ =>
+      Return(Queue.empty)
   }
 
   /**
    * Fail the queue: current and subsequent pollers will be completed
    * with the given exception; any outstanding messages are discarded.
    */
-  final def fail(exc: Throwable): Unit = fail(exc, true)
+  final def fail(exc: Throwable): Unit = fail(exc, discard = true)
 
   /**
    * Fail the queue. When `discard` is true, the queue contents is discarded
