@@ -16,98 +16,100 @@
 
 package com.twitter.logging
 
-import java.util.concurrent.{CountDownLatch, LinkedBlockingQueue}
+import com.twitter.concurrent.{NamedPoolThreadFactory, AsyncQueue}
+import com.twitter.util._
+import java.util.concurrent.Executors
+import java.util.concurrent.atomic.AtomicBoolean
 import java.util.{logging => javalog}
 
-import com.twitter.util.Time
-
 object QueueingHandler {
+
+  private[this] val executor = Executors.newCachedThreadPool(
+    new NamedPoolThreadFactory("QueueingHandlerPool", makeDaemons = true))
+
+  private val DefaultFuturePool = new ExecutorServiceFuturePool(executor)
+
+  private object QueueClosedException extends RuntimeException
+
   /**
    * Generates a HandlerFactory that returns a QueueingHandler
    *
-   * @param handler
-   * Wrapped handler.
+   * @param handler Wrapped handler that publishing is proxied to.
    *
-   * @param maxQueueSize
-   * Maximum queue size.  Records are dropped when queue overflows.
+   * @param maxQueueSize Maximum queue size. Records are sent to
+   * [[QueueingHandler.onOverflow]] when it is at capacity.
    */
   def apply(
     handler: HandlerFactory,
     maxQueueSize: Int = Int.MaxValue
-  ) = () => new QueueingHandler(handler(), maxQueueSize)
+  ): () => QueueingHandler =
+    () => new QueueingHandler(handler(), maxQueueSize)
 }
 
 /**
  * Proxy handler that queues log records and publishes them in another thread to
  * a nested handler. Useful for when a handler may block.
  *
- * @param handler
- * Wrapped handler.
+ * @param handler Wrapped handler that publishing is proxied to.
  *
- * @param maxQueueSize
- * Maximum queue size.  Records are dropped when queue overflows.
+ * @param maxQueueSize Maximum queue size. Records are sent to
+ * [[onOverflow]] when it is at capacity.
  */
 class QueueingHandler(handler: Handler, val maxQueueSize: Int = Int.MaxValue)
   extends ProxyHandler(handler) {
 
+  import QueueingHandler._
+
   protected val dropLogNode: String = ""
   protected val log: Logger = Logger(dropLogNode)
 
-  private[this] val queue = new LinkedBlockingQueue[javalog.LogRecord](maxQueueSize)
+  private[this] val queue = new AsyncQueue[javalog.LogRecord](maxQueueSize)
 
-  private[this] val thread = new Thread {
-    override def run() {
-      try {
-        while (true) {
-          val record = queue.take()
-          try {
-            doPublish(record)
-          } catch {
-            case e: InterruptedException =>
-              throw e // re-raise
-            case e: Throwable =>
-              e.printStackTrace()
-          }
+  private[this] val closed = new AtomicBoolean(false)
 
-          if (Thread.interrupted()) throw new InterruptedException
-        }
-      } catch {
-        case _: InterruptedException => // done
-      }
-      closeLatch.countDown() // signal closed
+  override def publish(record: javalog.LogRecord): Unit = {
+    DefaultFuturePool {
+      // We run this in a FuturePool to avoid satisfying pollers
+      // (which flush the record) inline.
+      if (!queue.offer(record))
+        onOverflow(record)
     }
   }
 
-  private[this] val closeLatch = new CountDownLatch(1)
-
-  thread.setDaemon(true)
-  thread.setName("QueueingHandler")
-  thread.start()
-
-  override def publish(record: javalog.LogRecord) = {
-    if (queue.offer(record) == false)
-      onOverflow(record)
-  }
-
-  private def doPublish(record: javalog.LogRecord) = {
+  private[this] def doPublish(record: javalog.LogRecord): Unit =
     super.publish(record)
-  }
 
-  override def close() {
-    // Stop thread
-    thread.interrupt()
-    closeLatch.await()
-    // Propagate close
-    super.close()
-  }
-
-  override def flush() {
-    // Publish all records in queue
-    var record = queue.poll()
-    while (record ne null) {
-      doPublish(record)
-      record = queue.poll()
+  private[this] def loop(): Future[Unit] = {
+    queue.poll().map(doPublish).respond {
+      case Return(_) => loop()
+      case Throw(QueueClosedException) => // indicates we should shutdown
+      case Throw(e) =>
+        // `doPublish` can throw, and we want to keep on publishing...
+        e.printStackTrace()
+        loop()
     }
+  }
+
+  // begin polling for log records
+  DefaultFuturePool {
+    loop()
+  }
+
+  override def close(): Unit = {
+    if (closed.compareAndSet(false, true)) {
+      queue.fail(QueueClosedException, discard = true)
+
+      // Propagate close
+      super.close()
+    }
+  }
+
+  override def flush(): Unit = {
+    // Publish all records in queue
+    queue.drain().map { records =>
+      records.foreach(doPublish)
+    }
+
     // Propagate flush
     super.flush()
   }
@@ -115,7 +117,7 @@ class QueueingHandler(handler: Handler, val maxQueueSize: Int = Int.MaxValue)
   /**
    * Called when record dropped.  Default is to log to console.
    */
-  protected def onOverflow(record: javalog.LogRecord) {
+  protected def onOverflow(record: javalog.LogRecord): Unit = {
     Console.err.println(String.format("[%s] log queue overflow - record dropped", Time.now.toString))
   }
 }
